--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@algofi-lend",
+  "name": "@algofi/lend",
   "version": "0.0.1",
   "description": "The official JavaScript SDK for the Algofi Lending Protocol",
   "main": "dist/index.js",
